# meeshbot-python

./: .env.example  AGENTS.md  README.md  justfile  pyproject.toml
meeshbot/: config.py  shell.py
meeshbot/handlers/: groupme.py
meeshbot/integrations/anthropic/: chat.py  client.py  context.py  tools.py
meeshbot/integrations/groupme/: client.py  queries.py
meeshbot/migrations/: 0007_create_ai_db_user.py
meeshbot/scheduled/: message_sync.py  scheduler.py
meeshbot/utils/: logging.py
