[project]
name = "meeshbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.96.0",
    "apscheduler>=3.11",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "oxyde>=0.5.2",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "structlog>=25.5.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.31.2",
    "ipython>=9.0.0",
    "mypy>=1.19.1",
    "ruff>=0.15.5",
    "types-requests>=2.32.4.20260107",
]

[tool.ruff]
cache-dir = ".cache/ruff"
target-version = "py314"
line-length = 100
exclude = ["meeshbot/migrations", "**/models/**.pyi"]

[tool.ruff.lint]
select = [
    "F",    # Pyflakes - basic Python errors
    "E",    # pycodestyle errors - PEP 8 violations
    "W",    # pycodestyle warnings - PEP 8 style issues
    "I",    # isort - import sorting
    "PGH",  # pygrep-hooks - miscellaneous linting rules
    "UP",   # pyupgrade - modernize Python code
    "S",    # flake8-bandit - security issues
    "C4",   # flake8-comprehensions - list/dict comprehension improvements
    "DJ",   # flake8-django - Django-specific rules
    "INP",  # flake8-no-pep420 - require __init__.py files
    "T20",  # flake8-print - detect print statements
    "SIM",  # flake8-simplify - code simplification suggestions
    "ARG",  # flake8-unused-arguments - unused function arguments
    "PTH",  # flake8-use-pathlib - prefer pathlib over os.path
    "FURB", # refurb - modernization and performance improvements
    "RUF",  # Ruff-specific rules
]

ignore = [
    "S311", # Standard pseudo-random generators
]

[tool.ruff.lint.per-file-ignores]
"app.py" = [
    "S104", # Hardcoded bind all interfaces
]
"shell.py" = [
    "F401", # Unused Import
]
"**/tests/**.py" = [
    "ARG001", # Unused arg
    "E501",   # Line length
    "S101",   # Assert statements
]
"meeshbot/integrations/anthropic/context.py" = [
    "E501", # Line length
]

[tool.mypy]
python_version = "3.14"
cache_dir = ".cache/mypy"

disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

allow_redefinition = true
pretty = true
show_error_codes = true
exclude = ["meeshbot/migrations/"]
